修改文字直播 2

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/SkyBallHetiRedMatchWordLive.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/SkyBallHetiRedMatchWordLive.storyboard
@@ -125,7 +125,7 @@
                                             <constraint firstAttribute="width" constant="20" id="mkX-zp-Cpr"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="第4节 100-100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iuk-WP-YDr">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iuk-WP-YDr">
                                         <rect key="frame" x="34" y="0.0" width="84" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="84" id="yit-TJ-PKG"/>
